# reviewbot

./: .env.example  .gitignore  APPLY.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cli/: commands.py
src/reviewbot/: __init__.py  config.py  main.py
src/reviewbot/ai/: adapters.py  codex.py  prompts.py
src/reviewbot/github/: app.py  webhooks.py
src/reviewbot/release/: release_drafter.py
src/reviewbot/review/: pr_reviewer.py  security_scanner.py
src/reviewbot/triage/: issue_triage.py
tests/: __init__.py
